--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,8 @@ phases:
       commands:
         - echo Getting Started
   pre_build:
-    commands:
-      - echo Logging in to Amazon ECR...
+    commands:
+      - echo Installing source  dependencies...
       - aws --version
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
       - REPOSITORY_URI=012345678910.dkr.ecr.us-east-1.amazonaws.com/base-image
