--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - aws ecr get-login --region us-east-1
-      - REPOSITORY_URI=163806924483.dkr.ecr.us-east-1.amazonaws.com/clariodockerrepo
+      - REPOSITORY_URI=163806924483.dkr.ecr.us-east-1.amazonaws.com
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
@@ -26,6 +26,4 @@ phases:
       - printf '[{"name":"cicd-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - cat imagedefinitions.json
 artifacts:
-  files:
-    - "build/*"
-  name: demoProjectArtifact
+  files: imagedefinitions.json
