--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-# spring.datasource.url=jdbc:mysql://couponservice.captrbmrh8fr.ap-south-1.rds.amazonaws.com:3306/mydb
-# spring.datasource.username=root
-# spring.datasource.password=root1234
+spring.datasource.url=jdbc:mysql://database-1.c1k3kcldebmp.us-east-1.rds.amazonaws.com:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=root1234
 
 server.port=9091
 
